feat: add Mysql and list comment action
